overflow-y fixed

--- a/src/components/EventPage/EventPage.scss
+++ b/src/components/EventPage/EventPage.scss
@@ -2,13 +2,26 @@
     margin: 0px 25px;
 } */
 
-
-.css-15tk2fu-MuiGrid-root{
-    display: inline-flex;
-    flex-flow: row;
-    flex-direction: row;
-    width: 18em;
+.titleCol1 {
+    text-align: left;
+    // display: inline-block;
+    font-size: 14px;
+    text-transform: capitalize;
+    
 }
+
+.titleCol2 {
+    text-align: right;
+    // display: inline-block;
+    // padding-left: 782px;
+}
+
+// .css-15tk2fu-MuiGrid-root{
+//     display: inline-flex;
+//     flex-flow: row;
+//     flex-direction: row;
+//     width: 18em;
+// }
 
 .stackTypeDisplay{
     background: black;
@@ -52,10 +65,9 @@
 .eventpagerow {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-between; 
     gap: 20px;
-    flex: .8;
-    flex: none;
+    // flex: none;
 }
 
 .col1 {
@@ -126,6 +138,7 @@ width: 700px;
     align-items: center; 
     overflow-x: scroll;
     scroll-behavior: smooth;
+    overflow-y: hidden;
 }
 
 .eventItem {
@@ -143,24 +156,12 @@ width: 700px;
 
 .eventTitle{
     padding-top: 15px;
+    font-size: 15px;
 }
 
 .eventDescription{
-    text-transform: capitalize;
-}
-
-.titleCol1 {
-    text-align: left;
-    // display: inline-block;
-    font-size: 14px;
-    text-transform: capitalize;
-    
-}
-
-.titleCol2 {
-    text-align: right;
-    // display: inline-block;
-    // padding-left: 782px;
+    text-transform: none;
+    font-size: 15px;
 }
 
 .titleDiv {
